--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background: rgb(188, 188, 188);
+    height: 100vh;
+    background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
 }
 
 .popup {
@@ -14,7 +15,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%) scale(0.1);
     padding: 30px;
-    background: white;
+    background: #ff7100;
     color: black;
     border-radius: 10px;
     visibility: hidden;
@@ -34,10 +35,18 @@ form {
     flex-direction: column;
 }
 
-form label, form input {
+form label {
+    margin: 10px 0 10px;
+}
+
+form input {
     border-width: 2px;
     padding: 10px;
     border-radius: 5px;
+    border: none;
+    box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75) inset;
+    -webkit-box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75) inset;
+    -moz-box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75) inset;
 }
 
 form h1 {
@@ -73,7 +82,11 @@ button{
     width: 100%;
     padding: 10px;
     border-radius: 5px;
-    margin: 10px 0 0;
+    margin: 20px 0 0;
+    border: none;
+    box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 7px 7px 16px -3px rgba(0,0,0,0.75);
 }
 
 .userInfo {
@@ -82,8 +95,8 @@ button{
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 30px;
-    background: white;
-    color: black;
+    background: #00e1ff;
+    color: white;
     border-radius: 10px;
     z-index: 1;
     font-family: Arial, sans-serif;
